--- a/ansible/roles/kubenodes/tasks/main.yml
+++ b/ansible/roles/kubenodes/tasks/main.yml
@@ -1,3 +1,4 @@
 - name: Join Cluster
   become: true
-  shell: "{{ hostvars['Master']['kubernetes_join_command'] }} --ignore-preflight-errors Swap"
+  ansible.builtin.shell:
+    cmd: "{{ hostvars['Master']['kubernetes_join_command'] }}"
