--- a/ansible/roles/deployment-tools/tasks/main.yml
+++ b/ansible/roles/deployment-tools/tasks/main.yml
@@ -25,4 +25,28 @@
 - name: Install pip files
   ansible.builtin.pip:
     name:
+      - kubernetes-validate
+      - openshift
+      - PyMySQL
       - PyYAML
+
+- name: Create directory for secure storing get_keyvault_value script
+  become: true
+  ansible.builtin.file:
+    path: /opt/utils
+    state: directory
+    owner: '{{ ansible_user }}'
+    mode: '0700'
+
+- name: Copy password obtainer
+  ansible.builtin.copy:
+    src: get_keyvault_value.py
+    dest: /opt/utils/get_keyvault_value.py
+    mode: "0700"
+    owner: '{{ ansible_user }}'
+
+- name: Make sure fs structure for ghost data exists
+  become: true
+  ansible.builtin.file:
+    path: /srv/nfs/mounts/ghost/data
+    state: directory
