Deploy over deploy with no issues. Considering if K8s master has been deployed before retrying. Consider if K8s node has been deployed before retrying. Install cert-manager to manage tls secrets. Create a dns alias for public ip address to access ghost service using a dns entry. Create tls certificate for ghost service dns entry

--- a/ansible/roles/ghost/tasks/main.yml
+++ b/ansible/roles/ghost/tasks/main.yml
@@ -91,6 +91,12 @@
 #   ansible.builtin.debug:
 #     var: grantperms
 
+- name: Create tls issuer
+  community.kubernetes.k8s:
+    state: present
+    template:
+      path: tls_issuer.yaml.j2
+
 - name: Deploy Ghost secrets
   community.kubernetes.k8s:
     state: present
@@ -126,7 +132,9 @@
 - name: Create Ghost deployment
   community.kubernetes.k8s:
     state: present
-    definition: "{{ lookup('file', 'ghost_deployment.yaml') | from_yaml }}"
+    #definition: "{{ lookup('file', 'ghost_deployment.yaml') | from_yaml }}"
+    template:
+      path: ghost_deployment.yaml.j2
     wait: yes
     wait_sleep: 10
     wait_timeout: 600
@@ -140,4 +148,6 @@
 - name: Create Ghost ingress
   community.kubernetes.k8s:
     state: present
-    definition: "{{ lookup('file', 'ghost_ingress.yaml') | from_yaml }}"
+    #definition: "{{ lookup('file', 'ghost_ingress.yaml') | from_yaml }}"
+    template:
+      path: ghost_ingress.yaml.j2
