--- a/ansible/roles/kubenodes/tasks/main.yml
+++ b/ansible/roles/kubenodes/tasks/main.yml
@@ -1,7 +1,12 @@
+- name: Debug ansible_host
+  ansible.builtin.debug:
+    var: inventory_hostname
+
 - name: Join Cluster
   become: true
   ansible.builtin.shell:
     cmd: "{{ hostvars['Master']['kubernetes_join_command'] }}"
+  when: not inventory_hostname | lower in hostvars['Master']['kubernetes_node_list'] | lower
 
 - name: Create local file system where to store mysql databases
   become: true
