Handle timeout and execution times, Add in-line documentation, Modify README.md, script to create mysql user, ghost healthcheck, ghost session, do not use rewrite for ghost ingress, run nginx controller in default namespace, run nginx controller with values from template file, use prefix for identifying services uniquely, mysql healthcheck, manage variables within tfvars, random ghost username, Allow port 22 connection only from our IP address, fix characters that are valid for random passwords and usernames, modify storage account displaying the way to include state.tf to manage remote state and keep working if it is not set

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,17 @@
 # SSH keys
 resources/id_rsa_*
 terraform/resources/*.pem
-**credentials.tf*
 
-# Terraform directory
+# Terraform
 .terraform*
+terraform/state.tf
+**credentials.tf*
 
 # Temp files
 *.swp
 
 # Output files
 *.out
+
+# Backup files
+**.bak*
