--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -1,15 +1,19 @@
 ---
-- name: Correct python version selected
+- name: Correct python version to always execute python3
   become: true
   community.general.alternatives:
     name: python
     link: /usr/bin/python
     path: /usr/bin/python3
+  async: 10
+  poll: 2
 
 - name: Update apt repository cache
   become: true
   ansible.builtin.apt:
     update_cache: yes
+  async: 300
+  poll: 5
 
 - name: Install Common packages
   become: true
@@ -28,6 +32,8 @@
     - python3-pip
     - software-properties-common
     - vim
+  async: 450
+  poll: 5
 
 - name: Install pip packages
   ansible.builtin.pip:
@@ -35,26 +41,36 @@
       - azure-cli==2.11.1
       - azure.identity
       - azure-keyvault-secrets
+  async: 450
+  poll: 5
 
 - name: Set vim as default editor
   become: true
   community.general.alternatives:
     name: editor
     path: /usr/bin/vim.basic
+  async: 10
+  poll: 2
 
 - name: Set timezone to Europe/Madrid
   become: true
   community.general.timezone:
     name: Europe/Madrid
+  async: 10
+  poll: 2
 
 - name: Enable Chrony service
   become: true
   ansible.builtin.systemd:
     name: chrony
     enabled: yes
+  async: 10
+  poll: 2
 
 - name: Ensure Chrony service is running
   become: true
   ansible.builtin.systemd:
     name: chrony
     state: started
+  async: 10
+  poll: 2
