--- a/ansible/roles/docker/tasks/main.yml
+++ b/ansible/roles/docker/tasks/main.yml
@@ -2,16 +2,22 @@
 - name: Gather the package facts
   ansible.builtin.package_facts:
     manager: apt
+  async: 10
+  poll: 2
 
 - name: Download Docker installation script
   ansible.builtin.get_url:
     url: https://get.docker.com
     dest: /tmp/get.docker.sh
+  async: 10
+  poll: 2
   when: not 'docker-ce' in ansible_facts.packages
 
 - name: Install Docker
   ansible.builtin.shell:
     cmd: /bin/bash /tmp/get.docker.sh
+  async: 450
+  poll: 5
   when: not 'docker-ce' in ansible_facts.packages
 
 - name: Enable Docker service
@@ -19,17 +25,23 @@
   ansible.builtin.systemd:
     name: docker
     enabled: yes
+  async: 10
+  poll: 2
 
 - name: Ensure Docker service is running
   become: true
   ansible.builtin.systemd:
     name: docker
     state: started
+  async: 300
+  poll: 5
 
 - name: Remove Docker installation script
   ansible.builtin.file:
     path: /tmp/get.docker.sh
     state: absent
+  async: 10
+  poll: 2
   when: not 'docker-ce' in ansible_facts.packages
 
 - name: Add {{ ansible_user }} to docker group
@@ -38,3 +50,5 @@
     name: "{{ ansible_user }}"
     groups: docker
     append: yes
+  async: 10
+  poll: 2
