--- a/ansible/roles/ghost/tasks/main.yml
+++ b/ansible/roles/ghost/tasks/main.yml
@@ -11,11 +11,6 @@
     cmd: python3 /opt/utils/get_keyvault_value.py keyvaultk8s mysql-ghost-username
   register: ghostuser
 
-- name: Get mysql admin password
-  ansible.builtin.shell:
-    cmd: python3 /opt/utils/get_keyvault_value.py keyvaultk8s mysql-admin-password
-  register: adminpassword
-
 - name: Get ghost password secret
   ansible.builtin.shell:
     cmd: python3 /opt/utils/get_keyvault_value.py keyvaultk8s mysql-ghost-password
@@ -36,11 +31,6 @@
     mysql_ghost_password: "{{ ghostpassword.stdout | string | b64encode }}"
   when: ghostpassword | length > 0
 
-- name: Register mysql admin password
-  ansible.builtin.set_fact:
-    mysql_admin_password: "{{ adminpassword.stdout | string }}"
-  when: adminpassword | length > 0
-
 - name: Register ghost database
   ansible.builtin.set_fact:
     mysql_ghost_database: "{{ ghostdb.stdout }}"
@@ -58,38 +48,16 @@
   ansible.builtin.set_fact:
     mysql_pod_name: "{{ mysqlpod.resources.0.metadata.name }}"
 
-- name: Create mysql user
+- name: Create Ghost mysql user/database/credentials
   community.kubernetes.k8s_exec:
     namespace: mysql
     pod: '{{ mysql_pod_name }}'
-    command: mysql -u root -p"{{ mysql_admin_password }}" -e "CREATE USER '{{ mysql_ghost_username }}'@'%' IDENTIFIED BY '{{ ghostpassword.stdout }}'"
+    command: /usr/bin/add-mysql-user '{{ ghostuser.stdout }}' '{{ ghostpassword.stdout }}' '{{ ghostdb.stdout }}'
   register: createuser
 
-# - name: Debug user creation
-#   ansible.builtin.debug:
-#     var: createuser
-
-- name: Create ghost database
-  community.kubernetes.k8s_exec:
-    namespace: mysql
-    pod: '{{ mysql_pod_name }}'
-    command: mysql -u root -p"{{ mysql_admin_password }}" -e "CREATE DATABASE {{ mysql_ghost_database }}"
-  register: createdatabase
-
-# - name: Debug create database
-#   ansible.builtin.debug:
-#     var: createdatabase
-
-- name: Grant DB permissions
-  community.kubernetes.k8s_exec:
-    namespace: mysql
-    pod: '{{ mysql_pod_name }}'
-    command: mysql -u root -p"{{ mysql_admin_password }}" -e "GRANT ALL PRIVILEGES ON {{ mysql_ghost_database }}.* TO '{{ mysql_ghost_username }}'@'%'"
-  register: grantperms
-
-# - name: Debug grant perms
-#   ansible.builtin.debug:
-#     var: grantperms
+- name: Debug user creation
+  ansible.builtin.debug:
+    var: createuser
 
 - name: Create tls issuer
   community.kubernetes.k8s:
@@ -132,7 +100,6 @@
 - name: Create Ghost deployment
   community.kubernetes.k8s:
     state: present
-    #definition: "{{ lookup('file', 'ghost_deployment.yaml') | from_yaml }}"
     template:
       path: ghost_deployment.yaml.j2
     wait: yes
@@ -148,6 +115,5 @@
 - name: Create Ghost ingress
   community.kubernetes.k8s:
     state: present
-    #definition: "{{ lookup('file', 'ghost_ingress.yaml') | from_yaml }}"
     template:
       path: ghost_ingress.yaml.j2
