--- a/ansible/roles/ingress-nginx-controller/tasks/main.yml
+++ b/ansible/roles/ingress-nginx-controller/tasks/main.yml
@@ -1,29 +1,15 @@
-# Create ingress-basic namespace
-- name: Create a ingress-basic namespace
-  community.kubernetes.k8s:
-    name: ingress-basic
-    api_version: v1
-    kind: Namespace
-    state: present
-
-# ansible-galaxy collection install community.kubernetes
-- name: Add stable chart repo
+- name: Add ingress-nginx repository
   community.kubernetes.helm_repository:
     name: ingress-nginx
     repo_url: "https://kubernetes.github.io/ingress-nginx"
 
-- name: Deploy latest version of ingress-nginx-controller
+- name: Install ingress-nginx
   community.kubernetes.helm:
-    name: nginx-ingress
+    name: controller
     chart_ref: ingress-nginx/ingress-nginx
-    release_namespace: ingress-basic
-    update_repo_cache: yes
-    values:
-      controller.replicaCount: 2
-      controller.nodeSelector.beta.kubernetes.io/os: linux
-      defaultBackend.nodeSelector.beta.kubernetes.io/os: linux
-      controller.admissionWebhooks.patch.nodeSelector.beta.kubernetes.io/os: linux
+    release_namespace: default
+    values: "{{ lookup('template', 'values.yaml.j2') | from_yaml }}"
 
-- name: Patch ingress controller
-  ansible.builtin.shell:
-    cmd: kubectl -n ingress-basic patch service nginx-ingress-ingress-nginx-controller -p '{"spec":{"externalIPs":["{{ private_lan_master }}"]}}'
+- name: Patch nginx-service
+  ansible.builtin.shell: |
+    kubectl patch service controller-ingress-nginx-controller -p '{"spec":{"externalIPs":["{{ private_lan_master }}"]},"loadBalancerIP": "{{ private_lan_master }}"}'
